--- a/src/components/stateTracker/StateTracker.css
+++ b/src/components/stateTracker/StateTracker.css
@@ -1,7 +1,7 @@
 .StateTracker {
   flex: 0 0 36em;
   margin-left: 1em;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .StateTracker__header {
